--- a/readinglist-web-admin/src/main/resources/templates/readingList.html
+++ b/readinglist-web-admin/src/main/resources/templates/readingList.html
@@ -61,7 +61,7 @@
   <br/>
   <hr/>
   <div>
-    <p><a th:href="'http://localhost:8002/readinglist-rest-client/index.html'" th:text="Home">Title</a></p>
+    <p><a th:href="'http://localhost:8002'" th:text="Home">Title</a></p>
   </div>
 </body>
 </html>
