--- a/readinglist-web-admin/src/main/resources/templates/login.html
+++ b/readinglist-web-admin/src/main/resources/templates/login.html
@@ -30,7 +30,7 @@
   <br/>
   <hr/>
   <div>
-    <p><a th:href="'http://localhost:8002'" th:text="Home">Title</a></p>
+    <p><a th:href="${@environment.getProperty('rest_client_url')}" th:text="Home">Title</a></p>
   </div>
 </body>
 </html>
