mobile display fixed

--- a/readinglist-web-admin/src/main/resources/templates/login.html
+++ b/readinglist-web-admin/src/main/resources/templates/login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1"/>
   <title>Login</title>
   <link rel="stylesheet" th:href="@{/css/style.css}"></link>
 </head>
