--- a/readinglist-web-admin/src/main/resources/templates/readingList.html
+++ b/readinglist-web-admin/src/main/resources/templates/readingList.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1"/>
   <title>Reading List</title>
   <link rel="stylesheet" th:href="@{/css/style.css}"></link>
   <script th:src="@{https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js}"></script>
